--- a/miniprogram/pages/question/question.wxml
+++ b/miniprogram/pages/question/question.wxml
@@ -9,12 +9,12 @@
       <button animation="{{wrongid==item.option? animationData:''}}" type="{{correctid==item.option?'primary':''}}" class="option" bindtap='selectAnswer' data-id="{{item.option}}" disabled='{{disable}}'>{{item.option}}. {{item.content}}</button>
     </view>
   </view>
-   <view class="favorate" bindtap="addFavorite">
+   <!-- <view class="favorate" bindtap="addFavorite">
     <view wx:if="{{favorite}}"><image class="icon" src="../../resource/icon/heart.png"></image></view>
     <view wx:else><image class="icon" src="../../resource/icon/heart_none.png"></image></view>
-  </view> 
-  <view class="footer">
+  </view>  -->
+  <!-- <view class="footer">
     <button id="btnPrevious" class="btn" bindtap='previousQuestion'>上一题</button>
     <button id="btnNext" class="btn" bindtap='nextQuestion' loading="{{pending}}">下一题</button>
-  </view>
+  </view> -->
 </view>
