--- a/miniprogram/pages/answerhome/index.wxss
+++ b/miniprogram/pages/answerhome/index.wxss
@@ -1,6 +1,13 @@
 /**index.wxss**/
-.container{
+.userinfo {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+  background-color: #2E4A62;
 }
 
 .type-btn{
@@ -8,6 +15,7 @@
   border-radius: 30rpx;
   border: solid #B4B7BA 8rpx;
   margin: 30rpx;
+  background-color: #F0EDE5;
 }
 
 .right-footer{
